# eeg-pairwise-analysis

./: .gitignore  README.md  pyproject.toml
report/siclari-neural-correlates/: references.bib  report.qmd  report.tex  siclari-spi.csv  siclari-stat-results.csv
scripts/: download_data.py  unzip.sh
src/eeg_analysis/: __init__.py  siclari-config.yaml  siclari.ipynb  siclari.py
