[project]
name = "eeg-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pyspi>=1.1.0",
    "scipy>=1.14.1",
    "statsmodels>=0.14.4",
]

[tool.uv]
override-dependencies = ["llvmlite==0.43.0", "numba==0.60.0", "sktime==0.35.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
