[project]
name = "eeg-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "future>=1.0.0",
    "ipympl>=0.9.6",
    "matplotlib>=3.10.0",
    "mne-connectivity>=0.7.0",
    "mne>=1.0.0",
    "numpy<2.0.0",
    "pandas==2.0.3",
    "pyspi>=1.1.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "setuptools>=75.6.0",
    "statsmodels>=0.14.4",
]

[tool.uv]
override-dependencies = ["llvmlite==0.43.0", "numba==0.60.0", "sktime==0.35.0", "mne>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
